--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,21 @@
+.layout {
+  max-width: 960px;
+  min-width: 480px;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 25px 24px;
+}
 .wrap {
-  position: relative;
-  display: block;
+  width: 100%;
+
+  /* M3/Elevation Light/1 */
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  background: #fff;
+  border-radius: 20px;
 }
