feat : localStorage 활용 / CRUD 사용

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,5 +17,16 @@
     0px 1px 2px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   background: #fff;
-  border-radius: 20px;
+  border-radius: 5px;
+}
+
+/* 목록 카드 */
+
+.card-list-footer {
+}
+.card-list-weather {
+}
+.card-list-opt {
+}
+.card-list-opt input {
 }
